# seclog

./: .gitignore  README.md  README_EN.md  pyproject.toml
seclog/: __init__.py  analyzer.py  cli.py  models.py  parser.py  reporter.py  rules.py  rules.yaml  sample_generator.py
tests/: test_analyzer.py  test_parser.py  test_reporter.py  test_rules.py
