[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seclog"
version = "1.0.0"
description = "A lightweight, privacy-focused security log analysis tool"
readme = "README_EN.md"
license = {text = "MIT"}
authors = [
    {name = "Huohua Dev", email = "huohua-dev@github.com"}
]
keywords = ["security", "log-analysis", "cli", "yara"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=5.0",
]

[project.scripts]
seclog = "seclog.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seclog*"]
